task1/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task1api-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: task1api
  type: NodePort
