task1/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: task1-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/*"
        backend:
          serviceName: task1api-service
          servicePort: 8080
